tests/e2e/pass/m3_var.ep
# EXIT: 0
# STDOUT: 42
# STDOUT: 43
fun main(): void {
    let x = 42
    print(itoa(x))
    print("\n")
    x = x + 1
    print(itoa(x))
    print("\n")
    os.ExitProcess(0)
}
